--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "phishit",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -31,7 +30,6 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-sms-android": "^0.4.1",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
