--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-sms-android": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
