--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/core": "^6.2.1",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
@@ -19,6 +20,7 @@
     "expo-sms": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
@@ -26,12 +28,14 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-sms-android": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-permissions": "^3.10.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
